--- a/index.html
+++ b/index.html
@@ -8,5 +8,42 @@
 </head>
 <body>
     
+    /* footer --start-- */
+    <footer>
+        <div class="footer-left">
+            <img src="./logo.svg" class="logo" alt="logo">
+            <h4 class="logo-name">King Furniture</h4>
+        </div>
+        <div class="footer-right">
+            <div class="footer-list-1">
+                <ul>
+                    <li><span class="fab fa-twitter"></span></li>
+                    <li><span class="fab fa-facebook"></span></li>
+                    <li><span class="fab fa-instagram"></span></li>
+                </ul>
+    
+            </div>
+            <div class="footer-list-2">
+                <ul>
+                    <li>About</li>
+                    <li>Contact</li>
+                    <li>Sign in</li>
+                </ul>
+            </div>
+            <div class="footer-list-3">
+                <ul>
+                    <li>Product</li>
+                    <li>Collection</li>
+                    <li>Blog</li>
+                    <li>Pricing</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>Copyright &copy;2022</p>
+            <p>Web Design and Development by FED B-A13 team</p>
+        </div>
+    </footer>
+    /* footer --end-- */
 </body>
 </html>
