--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
 <body>
     <footer>
         <div class="footer-left">
-            <img src="./logo.svg" class="logo" alt="logo">
+            <img src="./images/logo.svg" class="logo" alt="logo">
             <h4 class="logo-name">King Furniture</h4>
         </div>
         <div class="footer-right">
