--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     /* footer --start-- */
     <footer>
         <div class="footer-left">
-            <img src="./logo.svg" class="logo" alt="logo">
+            <img src="./images/logo.svg" class="logo" alt="logo">
             <h4 class="logo-name">King Furniture</h4>
         </div>
         <div class="footer-right">
