--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div class="header-left">
+            <div class="header-logo">
+                <img src="images/logo.svg" alt="logo king furniture" />
+            </div>
+            <div class="navbar">
+                <ul>
+                    <li>Product</li>
+                    <li>Collection</li>
+                    <li>Pricing</li>
+                </ul>
+            </div>
+        </div>
+        <div class="header-right">
+            <a href="#" class="btn-signin" style="text-decoration: none">Sign in</a>
+            <div class="search-bar">
+                <input />
+                <span class="fa fa-search"></span>
+            </div>
+        </div>
+    </header>
     
     /* footer --start-- */
     <footer>
