--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/f2dcb02a05.css" />
 </head>
 <body>
     <header>
@@ -28,7 +30,7 @@
             </div>
         </div>
     </header>
-    
+
     /* footer --start-- */
     <footer>
         <div class="footer-left">
