--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div class="footer-right">
             <div class="footer-list-1">
                 <ul>
-                    <li><span class="fab fa-twitter"></span></li>
-                    <li><span class="fab fa-facebook"></span></li>
-                    <li><span class="fab fa-instagram"></span></li>
+                    <li><span class="fa fa-twitter"></span></li>
+                    <li><span class="fa fa-facebook"></span></li>
+                    <li><span class="fa fa-instagram"></span></li>
                 </ul>
     
             </div>
