--- a/index.html
+++ b/index.html
@@ -31,5 +31,38 @@
             </div>
         </div>
     </header>
+    <footer>
+        <div class="footer-left">
+            <div class="footer-logo">
+                <img class="footer-logo-icon" src="./images/logo.svg" alt="Logo King Furniture" />
+                <h4 class="footer-logo-name">King Furniture</h4>
+            </div>
+        </div>
+        <div class="footer-right">
+            <div class="footer-list-1">
+                <ul>
+                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                    <li><a href="#"><span class="fa fa-instagram"></span></a></li>
+                </ul>
+            </div>
+            <div class="footer-list-2">
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Sign in</a></li>
+                </ul>
+            </div>
+            <div class="footer-list-3">
+                <li><a href="#">Product</a></li>
+                <li><a href="#">Collection</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Pricing</a></li>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>Copyright &copy; 2020 <br> Web Design and Development by FED B-A13 team </p>
+        </div>
+    </footer>
 </body>
 </html>
