--- a/index.html
+++ b/index.html
@@ -50,6 +50,26 @@
             </div>
         </div>
     </div>
+    <div class="message-wrapper">
+        <div class="container">
+          <div class="testi">
+            <h2>Our Costumer Saying</h2>
+            <h4>“I love to take a look at those small room.<span><br>Actually I love going through the store and see those little cozy and modern rooms. Then buying a lot of small stuff useful for home. Putting pieces of furniture together is like playing lego.”</span></h4>
+          </div>
+          <div class="name-cust">
+            <img src="samantha.png" alt="Samantha William">
+            <p>Samantha William</p>
+          </div>
+          <div class="offer">
+            <h2>Save Your 20% Off</h2>
+            <p>Save your 20% off for your first order</p>
+            <div class="signup">
+              <input id="email" type="text" placeholder="Enter email address">
+              <input id="submit" type="submit" value="Signup">
+            </div>
+          </div>
+        </div>
+    </div>
     <footer>
         <div class="footer-left">
             <div class="footer-logo">
