--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             </div>
 
             <div class="content-item">
-                <img src="img/Picture1.png" width="373px" height="451px">
+                <img src="./images/Picture1.png" width="373px" height="451px">
             </div>
             <div class="contents-item">
-                <img src="img/Picture2.png" width="272.1px" height="329px">
+                <img src="./images/Picture2.png" width="272.1px" height="329px">
             </div>
         </div>
     </div>
