Tweaking top-wrapper
Changing css property to suit the desain

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
 
             <div class="content-item">
-                <img src="./images/Picture1.png" width="373px" height="451px">
+                <img src="./images/Picture1.png" width="373px" height="436px">
             </div>
             <div class="contents-item">
                 <img src="./images/Picture2.png" width="272.1px" height="329px">
@@ -51,7 +51,7 @@
         </div>
     </div>
     <div class="message-wrapper">
-        <div class="container">
+        <div class="message-container">
           <div class="testi">
             <h2>Our Costumer Saying</h2>
             <h4>“I love to take a look at those small room.<span><br>Actually I love going through the store and see those little cozy and modern rooms. Then buying a lot of small stuff useful for home. Putting pieces of furniture together is like playing lego.”</span></h4>
