--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FED-B-A13</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/f2dcb02a05.css" />
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
@@ -31,6 +31,48 @@
             </div>
         </div>
     </header>
+    <div class="top-wrapper">
+            <div class="container">
+                <h1> Furniture For Your Dream</h1>
+                <p> Find the furniture product you want by shopping at King Furniture</p>
+
+                <div class="btn-wrapper">
+                    <a href="#" class="btn-buy">Buy Now</a>
+                    <a href="#" class="btn-explore">Explore</a>
+                  </div>
+            </div>
+
+            <div class="content-item">
+                <img src="./images/Picture1.png" width="373px" height="436px">
+            </div>
+            <div class="contents-item">
+                <img src="./images/Picture2.png" width="272.1px" height="329px">
+            </div>
+        </div>
+    </div>
+    <div class="message-wrapper">
+        <div class="message-container">
+          <div class="testi">
+            <h2>Our Costumer Saying</h2>
+            <h4>“I love to take a look at those small room.<span><br>Actually I love going through the store and see those little cozy and modern rooms. Then buying a lot of small stuff useful for home. Putting pieces of furniture together is like playing lego.”</span></h4>
+          </div>
+          <div class="name-cust">
+            <img src="./images/user.svg" alt="Samantha William">
+            <p>Samantha William</p>
+          </div>
+        </div>
+        <div class="message-container">
+            <div class="offer">
+                <h2>Save Your 20% Off</h2>
+                <p>Save your 20% off for your first order</p>
+                <div class="signup">
+                    <input id="email" type="text" placeholder="Enter email address">
+                    <input id="submit" type="submit" value="Signup">
+                </div>
+            </div>
+            </div>
+          </div>
+        </div>
     <footer>
         <div class="footer-left">
             <div class="footer-logo">
