--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>FED-B-A13</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/f2dcb02a05.css" />
+    <link rel="stylesheet" href="responsive.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 <body>
