--- a/index.html
+++ b/index.html
@@ -51,6 +51,33 @@
             </div>
         </div>
     </div>
+    <!--Produk start--> 
+
+    <div class="product">
+        <div class="section-title">
+            <h2>Our Product</h2>
+        </div>
+        <div class="product-items">
+            <div class="product-item">
+                <img src="./images/product-1.png" alt="product-1">
+                <p>Easy Chair</p>
+                <h3>$175</h3>
+            </div>
+            <div class="product-item">
+                <img src="./images/product-2.png" alt="product-2">
+                <p>Cabinet</p>
+                <h3>$325</h3>
+            </div>
+            <div class="product-item">
+                <img src="./images/product-3.png" alt="product-3">
+                <p>Arm Chair</p>
+                <h3>$250</h3>
+            </div>
+        </div>
+
+    </div>
+
+    <!--Produk stop-->
     <div class="message-wrapper">
         <div class="message-container">
           <div class="testi">
